--- a/Invco/Invco.csproj
+++ b/Invco/Invco.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Container\IoCContainer.cs" />
+    <Compile Include="Controllers\IoCController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
